# whisper-submission

./: .gitignore  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml  smoke_test.py  test_speculative.py
api/: server.py
benchmarks/: run_benchmark.py
configs/: default.yaml
examples/: api_client_example.py
speculative_whisper/: __init__.py  audio.py  cli.py  config.py  core.py  decoding.py  evaluation.py  models.py
tests/: conftest.py  test_audio.py  test_core_api.py  test_decoding.py  test_evaluation.py  test_integration.py
